[project]
name = "timestamped-for-f1-historical-processing"
version = "0.0.1"
requires-python = ">=3.13"
authors = [
    {name = "Jeffrey Zhang", email = "jeffreyjpizhang@gmail.com"},
]
dependencies = [
    "asyncio>=3.4.3",
    "fsspec>=2025.5.1",
    "loguru>=0.7.3",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "s3fs>=2025.5.1",
    "timestamped-for-f1-historical-api>=0.0.4",
    "typer>=0.16.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
