[project]
name = "historical"
version = "0.1.0"
requires-python = ">=3.13"
authors = [
    {name = "Jeffrey Zhang", email = "jeffreyjpizhang@gmail.com"},
]
dependencies = [
    "datetime>=5.5",
    "fsspec>=2025.5.1",
    "loguru>=0.7.3",
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "requests>=2.32.3",
    "s3fs>=2025.5.1",
    "typer>=0.16.0",
]
