[project]
name = "historical"
version = "0.1.0"
requires-python = ">=3.13"
authors = [
    {name = "Jeffrey Zhang", email = "jeffreyjpizhang@gmail.com"},
]
dependencies = [
    "alembic>=1.16.2",
    "asyncio>=3.4.3",
    "datetime>=5.5",
    "fastapi>=0.115.13",
    "fsspec>=2025.5.1",
    "loguru>=0.7.3",
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.3",
    "s3fs>=2025.5.1",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-helpers>=2.0.1",
    "typer>=0.16.0",
]
